objects/MinistryTalksAndDecisions__c.object
<CustomObject><fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>This can include more details on how you came to the decision or discipleship points or other senses/impressions from the talk.</inlineHelpText>
        <label>Comments (Internal for Leadership)</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Ministry Talks &amp; Decisions</relationshipLabel>
        <relationshipName>MinistryTalksDecisions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>DateOfTalk__c</fullName>
        <label>Date of Talk</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Decision__c</fullName>
        <inlineHelpText>Simply the facts of the decision</inlineHelpText>
        <label>Decision</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Involvement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Involvement</label>
        <referenceTo>BP_Involvement__c</referenceTo>
        <relationshipLabel>Ministry Talks &amp; Decisions</relationshipLabel>
        <relationshipName>MinistryTalksDecisions</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>WhoHadTalkNonSFUser__c</fullName>
        <inlineHelpText>If a staff member that  does not have a salesforce user had the talk then write their name here</inlineHelpText>
        <label>Who had Talk (Non SF User)</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>WhoHadTalk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Who had Talk</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MinistryTalksDecisions</relationshipName>
        <type>Lookup</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Ministry Talks &amp; Decisions</label><nameField>
        <label>Ministry Talks and Decisions Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Ministry Talks &amp; Decisions</pluralLabel><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>